# pydata-nyc-2023-recap

./: .nojekyll  pydata-recap.html  pydata-recap.qmd  pyproject.toml
