[tool.poetry]
name = "pydata-nyc-2023-recap"
version = "0.1.0"
description = ""
authors = ["David Gallagher <dgallagher@cleverdevices.com>"]
readme = "README.md"
packages = [{include = "pydata_nyc_2023_recap"}]

[tool.poetry.dependencies]
python = "^3.10"
ibis-framework = {extras = ["sqlite"], version = "^7.0.0"}
nbformat = "^5.9.2"
nbclient = "^0.9.0"
plotly = "^5.18.0"
matplotlib = "^3.8.1"
tabulate = "^0.9.0"
streamlit = "^1.28.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
